nginx-fabric-k8s-gatewayapi/sample-02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-02
  template:
    metadata:
      labels:
        app: demo-02
    spec:
      containers:
      - name: app
        image: hashicorp/http-echo
        args:
        - "-text=hello-ngf-app-02"
        ports:
        - containerPort: 5678
