nginx-fabric-k8s-gatewayapi/http-route-path-hostbased-routing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: host-routing
spec:
  parentRefs:
  - name: nginx-gateway

  rules:
  - matches:
    - headers:
      - name: Host
        value: app1.local
    backendRefs:
    - name: demo-svc
      port: 80


  - matches:
    - headers:
      - name: Host
        value: app2.local
    backendRefs:
    - name: demo-svc-02
      port: 80
