nginx-fabric-k8s-gatewayapi/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-route
spec:
  parentRefs:
  - name: nginx-gateway
  hostnames:
    - "dev.sample.app.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: demo-svc
      port: 80
